# pytago

./: pyproject.toml
tools/: setup.sh
