[tool.poetry]
name = "pytago"
version = "0.1.0"
description = ""
authors = ["Michael Phelps <michaelphelps@nottheswimmer.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astroid = "^2.12.12"
dill = "^0.3.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
